force-app/main/default/objects/CartDeliveryGroup/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cart Delivery Groups (Bill To Account)</relationshipLabel>
    <relationshipName>Cart_Delivery_Groups_BillTo</relationshipName>
    <type>Lookup</type>
</CustomField>