force-app/main/default/objects/CartDeliveryGroup/fields/Is_Part_of_Split__c.field-meta.xml
<CustomField>
    <fullName>Is_Part_of_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Part of Split</label>
    <type>Checkbox</type>
</CustomField>