force-app/main/default/objects/CartDeliveryGroup/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>