force-app/main/default/objects/CartDeliveryGroup/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cart Delivery Groups</relationshipLabel>
    <relationshipName>Cart_Delivery_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>